<resources>
    <string name="app_name">Movie Rocks</string>
    <string name="this_is_the_main_logo_the_this_app">This is the main logo the this app</string>
    <string name="copyright">MOVIE ROCKS</string>
    <string name="entertainment">All the Right are reserved by PH7 Entertainment</string>
    <string name="onBoardingPhotos">onBoardingPhotos</string>
    <string name="titleOne">Welcome to the Movie Rock!</string>
    <string name="titleTwo">Discover New Movies with Us</string>
    <string name="titleThree">A Movie Lover\'s Dream App</string>
    <string name="titleFour"> Never Miss a Movie Again</string>
    <string name="descOne">A quick guide to help you get started with our app and find your favorite movies.</string>
    <string name="descTwo">Join us as we take you on a journey to explore new and exciting movies from around the world.</string>
    <string name="descThree">Our app is designed to make it easy for you to browse and discover the latest movies, actors, and directors.
</string>
    <string name="descFour">Stay up to date with the latest releases and never miss a movie again with our easy-to-use movie database app.</string>
    <string name="nextButton">This the image of the button to next</string>
    <string name="first_photo">this is the first page of the onboarding app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="loginFrag">LoginFrag</string>
    <string name="SignUpFrag">SignUpFrag</string>
    <string name="this_is_the_logo">This is the Logo</string>
    <string name="log_in_now">Log In Now</string>
    <string name="please_login_to_continue_using_our_app">Please login to continue using our app</string>
    <string name="email">Email</string>
    <string name="forget_password">Forget Password?</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="create_an_account">Create Account</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign-Up</string>
    <string name="home">Home</string>
    <string name="up_coming">Up-Coming</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home_frag">home Fragment</string>
    <string name="profile_frag">Profile Fragment</string>
    <string name="upcoming_frag">Upcoming Fragment</string>
    <string name="this_holds_movie_poster">This holds movie poster</string>
    <string name="popular_movies">Popular movies</string>
    <string name="up_coming_movies">Up Coming Movies</string>
    <string name="userName">Paurakh Saud</string>
    <string name="profile_image">profile Image</string>
    <string name="facebookIcon">facebookIcon</string>
    <string name="whatsApp">whatsapp</string>
    <string name="instGram">instgram</string>
    <string name="snapchat">snapChat</string>
    <string name="paurakhsaud123_gmail_com">paurakhsaud123@gmail.com</string>
    <string name="_9848840209">9848840209</string>
    <string name="log_out">Log Out</string>

</resources>