<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".features.loginandsignupscreen.fragments.LoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"

        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/this_is_the_logo"
            android:layout_marginTop="70dp"
            android:src="@drawable/logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:textColor="@color/black"
            android:text="@string/log_in_now"
            android:textSize="25sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:textStyle="bold"
            android:text="@string/please_login_to_continue_using_our_app"
            android:textSize="14sp"/>


        <androidx.cardview.widget.CardView
            android:layout_width="356dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <EditText
                    android:layout_width="321dp"
                    android:layout_height="66dp"
                    android:layout_marginTop="30dp"
                    android:autofillHints="username"
                    android:background="@drawable/edit_text_item"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="5dp"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:hint="@string/username"
                    android:textColor="@color/lightBlue"
                    tools:ignore="LabelFor"/>

                <EditText
                    android:layout_width="321dp"
                    android:layout_height="66dp"
                    android:layout_marginTop="30dp"
                    android:autofillHints="password"
                    android:background="@drawable/edit_text_item"
                    android:drawableStart="@drawable/baseline_lock_24"
                    android:drawableEnd="@drawable/baseline_remove_red_eye_24"
                    android:drawablePadding="10dp"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingEnd="5dp"
                    android:hint="@string/password"
                    android:textColor="@color/lightBlue"
                    tools:ignore="LabelFor"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="3dp"
                    android:layout_marginEnd="35dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/lightBlue"
                    android:textSize="14sp" />
                <Button
                    android:layout_width="278dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="56dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/rounded_btn"
                    android:focusable="true"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="17sp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>




    </LinearLayout>
</ScrollView>